--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,108 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-color: #fff;
+  color: #222;
+  font-family: "Arial", san-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+}
+
+*,
+*::before *::after {
+  box-sizing: inherit;
+}
+
+.main-content {
+  flex-grow: 1;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+nav{
+  padding:0 1rem;
+}
+.content{
+  min-height:calc(100vh - 70px - 64px);
+  padding: 1.5rem 0;
+}
+.goods{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+} 
+.card{
+  display:flex;
+  flex-direction:column;
+}
+.card-content{
+  flex-grow:1;
+}
+.cart{
+  position: fixed;
+  right: 2rem;
+  z-index: 5;
+  cursor: pointer;
+  padding: 1rem;
+}
+.basket-list{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+  background-color:#fff;
+  max-width: 95%;
+  width: 50rem;
+  box-shadow: 0 6px 15px 0 rgba(0, 0, 0, .5);
+  animation: show .5s ease-in-out;
+}
+.baskeet-close{
+  cursor:pointer;
+  position: absolute;
+  top:.5rem;
+  right: .5rem;
+  color: #fff;
+}
+.basket-delete{
+  cursor: pointer;
+}
+.basket{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .5);
+  overflow: hidden;
+}
+.ctr{
+  position: relative;
+  top:-10px;
+  margin-right: 5px;
+}
+@keyframes show{
+  from {
+    top:70%;
+    opacity: 0;
+  }to{
+    top:50%;
+    opacity: 1;
+  }
+}
+@media (min-width:767px){
+  .cart{
+    top: 5rem;
+    bottom: unset;
+  }
 }
